# RRC-RnD-Catbot

./: README.md  preliminary_cat_movement
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hyperdog_ctrl/lib/hyperdog_ctrl/: IK_node  cmd_manager_node
install/hyperdog_ctrl/share/hyperdog_ctrl/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hyperdog_gazebo_sim/lib/hyperdog_gazebo_sim/: fake_odom
install/hyperdog_gazebo_sim/share/hyperdog_gazebo_sim/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hyperdog_gazebo_sim/share/hyperdog_gazebo_sim/cmake/: hyperdog_gazebo_simConfig.cmake
install/hyperdog_gazebo_sim/share/hyperdog_gazebo_sim/launch/: hyperdog_gazebo_sim_allPkgs.launch.py
install/hyperdog_launch/share/hyperdog_launch/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hyperdog_msgs/include/hyperdog_msgs/hyperdog_msgs/msg/: geometry.h  joy_ctrl_cmds.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/hyperdog_msgs/include/hyperdog_msgs/hyperdog_msgs/msg/detail/: geometry__builder.hpp  geometry__functions.c  geometry__rosidl_typesupport_fastrtps_c.h  geometry__rosidl_typesupport_introspection_cpp.hpp  geometry__struct.h  geometry__traits.hpp  joy_ctrl_cmds__functions.c  joy_ctrl_cmds__functions.h  joy_ctrl_cmds__struct.hpp  joy_ctrl_cmds__type_support.c  joy_ctrl_cmds__type_support.cpp  limits__description.c  limits__functions.c  limits__rosidl_typesupport_introspection_c.h  limits__rosidl_typesupport_introspection_cpp.hpp  limits__struct.hpp  limits__traits.hpp
install/hyperdog_msgs/share/ament_index/resource_index/package_run_dependencies/: hyperdog_msgs
install/hyperdog_msgs/share/hyperdog_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hyperdog_msgs/share/hyperdog_msgs/cmake/: export_hyperdog_msgs__rosidl_generator_cExport-noconfig.cmake  export_hyperdog_msgs__rosidl_generator_cppExport.cmake  export_hyperdog_msgs__rosidl_generator_pyExport-noconfig.cmake  export_hyperdog_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_hyperdog_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  hyperdog_msgs__rosidl_typesupport_cExport.cmake
install/hyperdog_msgs/share/hyperdog_msgs/msg/: Geometry.json  JoyCtrlCmds.idl  JoyCtrlCmds.json
install/hyperdog_teleop/lib/hyperdog_teleop/: hyperdog_teleop_joy_node
install/hyperdog_teleop/share/ament_index/resource_index/parent_prefix_path/: hyperdog_teleop
install/hyperdog_teleop/share/hyperdog_teleop/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hyperdog_teleop/share/hyperdog_teleop/cmake/: hyperdog_teleopConfig.cmake
install/motor_package/lib/motor_package/: bldc_motor  brushed_motor  servo_motor
install/motor_package/share/motor_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/hyperdog_ros2_rnd/hyperdog_ctrl/: setup.cfg
src/hyperdog_ros2_rnd/hyperdog_gazebo_sim/launch/: hyperdog_gazebo_sim.launch.py
src/hyperdog_ros2_rnd/hyperdog_launch/: setup.cfg
src/hyperdog_ros2_rnd/hyperdog_teleop/: CMakeLists.txt
src/motors/motor_package/: bldc_motor.py  brushed_motor.py  package.xml  servo_motor.py  setup.cfg  setup.py
src/movement/: package.xml
src/movement/src/: general_movement.py
src/sensors/: encoders.py  force_sensor.py  imu.py  motor_controller.py  package.xml  setup.py
src/vision/: camera.py  package.xml  setup.py
