<?xml version="1.0"?>
<package format="3">
  <name>vision</name>
  <version>0.0.1</version>
  <description>Vision package for the catbot</description>
  <maintainer email="winsonlin411@gmail.com">winsonl8</maintainer>
  <license>MIT</license>

  <!-- Define dependencies -->
  <depend>sensor_msgs</depend> <!-- For handling sensor data, including camera images -->
  <depend>image_transport</depend> <!-- For efficient image transport -->
  <depend>cv_bridge</depend> <!-- For converting between ROS Image messages and OpenCV images -->
  <depend>vision_opencv</depend> <!-- ROS bindings for OpenCV -->
  <depend>image_pipeline</depend> <!-- For image processing utilities -->
  <depend>tf2</depend> <!-- For handling coordinate transforms, which can be crucial for vision applications -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rclpy</depend> <!-- For ROS Python client library -->

  <!-- For message generation -->
  <build_depend>ament_cmake</build_depend>
  <build_export_depend>ament_cmake</build_export_depend>

  <!-- For testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>